<resources>
    <string name="app_name">SevenSummitsFinal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_wettkampf">Wettkampf</string>
    <string name="menu_home">Home</string>
    <string name="menu_gps">GPS</string>
    <string name="menu_maps">Maps</string>
    <string name="menu_profil">Profil</string>
    <string name="menu_logout">LogOut</string>
    <string name="menu_myActivities" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>